<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">GoQuiz</string>
    <string name="buttonTrue">Verdadeiro</string>
    <string name="buttonFalse">Falso</string>
    <string name="buttonNext">Avançar</string>
    <string name="buttonPrev">Anterior</string>
    <string name="buttonReset">Reiniciar</string>
    <string name="buttonChangeDifficulty">Alterar Dificuldade</string>
    <string name="msgCorrect">Correto!</string>
    <string name="msgWrong">Errado!</string>
    <string name="msgNotPrev">Não permitido!</string>
    <string name="msgReset">Reiniciar!</string>
    <string name="trueOrFalse">Verdadeiro ou falso?</string>
    <string name="countTokens">Você tem %d de %d tokens de trapaça!</string>
    <string name="cantCheat">Você não tem mais fichas de trapaça!</string>
    <string name="yourDifficulty">Sua dificuldade é %s</string>

    <string name="incorrect_toast">Incorreto!</string>
    <string name="answer">Resposta</string>
    <string name="warning_text">Tem certeza de que deseja fazer isso?</string>
    <string name="show_answer_button">Mostrar resposta</string>
    <string name="cheat_button">Trapaça!</string>
    <string name="judgment_toast_ok">Trapacear é errado.</string>
    <string name="judgment_toast_wrong">Mesmo trapaceando, você cometeu um erro.</string>

    <string name="msgCongratulations">Parabéns, você tirou %d de %d!</string>

    <string name="question_geo1">Canberra é a capital da Austrália.</string>
    <string name="question_geo2">O Oceano Pacífico é maior que o Oceano Atlântico.</string>
    <string name="question_geo3">O Canal de Suez conecta o Mar Vermelho e o Oceano Índico.</string>
    <string name="question_geo4">A nascente do rio Nilo fica no Egito.</string>
    <string name="question_geo5">O rio Amazonas é o maior rio das Américas.</string>
    <string name="question_geo6">O Lago Baikal é o lago de água doce mais antigo e profundo do mundo.</string>

    <string name="question_tec1">O iPhone foi lançado pela primeira vez em 2007.</string>
    <string name="question_tec2">O primeiro vírus de computador foi criado na década de 1970.</string>
    <string name="question_tec3">O acrônimo "URL" significa "Universal Resource Locator".</string>
    <string name="question_tec4">HTML é uma linguagem de programação.</string>
    <string name="question_tec5">O primeiro mecanismo de busca se chamava "Archie."</string>
    <string name="question_tec6">O termo "Bluetooth" vem de um rei dinamarquês do século X chamado Harald Bluetooth.</string>

    <string name="question_sci1">A Terra é o terceiro planeta a contar do Sol no nosso sistema solar.</string>
    <string name="question_sci2">O corpo humano tem quatro pulmões.</string>
    <string name="question_sci3">A velocidade da luz é de aproximadamente 186.000 milhas por segundo.</string>
    <string name="question_sci4">A escala de pH é usada para medir a acidez ou basicidade de uma solução.</string>
    <string name="question_sci5">O oxigênio é o elemento mais abundante na atmosfera da Terra.</string>
    <string name="question_sci6">A teoria da relatividade foi proposta pela primeira vez por Isaac Newton.</string>

    <string name="question_his1">A Revolução Francesa começou em 1789.</string>
    <string name="question_his2">A queda do Muro de Berlim ocorreu em 1989.</string>
    <string name="question_his3">A primeira colônia inglesa bem-sucedida na América do Norte foi Jamestown.</string>
    <string name="question_his4">A peste negra se originou na Ásia no século 14 e se espalhou para a Europa, matando milhões de pessoas.</string>
    <string name="question_his5">O Tratado de Versalhes pôs fim à Segunda Guerra Mundial.</string>
    <string name="question_his6">O Império Romano foi fundado em 27 AC e durou até 476 DC.</string>

    <string name="question_art1">Michelangelo pintou o teto da Capela Sistina.</string>
    <string name="question_art2">A Mona Lisa foi pintada por Vincent van Gogh.</string>
    <string name="question_art3">O movimento impressionista teve origem na França no final do século XIX.</string>
    <string name="question_art4">Beethoven compôs a Nona Sinfonia.</string>
    <string name="question_art5">"A Noite Estrelada" é uma pintura de Claude Monet.</string>
    <string name="question_art6">Shakespeare escreveu a peça "Romeu e Julieta."</string>

    <string name="question_spo1">As Olimpíadas acontecem a cada quatro anos.</string>
    <string name="question_spo2">Lionel Messi é um jogador de futebol brasileiro.</string>
    <string name="question_spo3">Michael Jordan é considerado um dos maiores jogadores de basquete de todos os tempos.</string>
    <string name="question_spo4">O Super Bowl é o jogo do campeonato da National Football League (NFL).</string>
    <string name="question_spo5">Usain Bolt detém o recorde mundial da corrida de 100 metros mais rápida.</string>
    <string name="question_spo6">A Copa do Mundo é realizada a cada dois anos.</string>

    <string name="choiceDifficulty">Escolha sua dificuldade:</string>
    <string name="easyDifficulty">Fácil</string>
    <string name="mediumDifficulty">Médio</string>
    <string name="hardDifficulty">Difícil</string>
    <string name="msgWithoutCheatDifficulty">%d perguntas.\nRespostas trapaceadas contam!</string>
    <string name="msgWithCheatDifficulty">%d perguntas.\nRespostas trapaceadas não contam!</string>
    <string name="save">SALVAR</string>

</resources>
