<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_1">

    <TextView
        android:id="@+id/text_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/amaranth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_choiceDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/choiceDifficulty"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/amaranth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroup_choiceDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/text_choiceDifficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/radioButton_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/white"
            android:text="@string/easyDifficulty"/>

        <RadioButton
            android:id="@+id/radioButton_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/white"
            android:text="@string/mediumDifficulty"/>

        <RadioButton
            android:id="@+id/radioButton_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/white"
            android:text="@string/hardDifficulty"/>

    </RadioGroup>

    <TextView
        android:id="@+id/text_msgDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="@string/msgWithoutCheatDifficulty"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        android:fontFamily="@font/amaranth"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_choiceDifficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>