<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    tools:context=".views.CheatActivity">

    <TextView
        android:id="@+id/text_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dw_line_purple1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_appName" />

    <TextView
        android:id="@+id/text_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/warning_text"
        tools:text="@string/answer"
        android:textSize="28sp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/text_appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_showAnswer"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_showAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_round_purple_1"
        style="@style/Widget.AppCompat.Button"
        android:textColor="@color/white"
        android:text="@string/cheat_button"
        android:fontFamily="@font/amaranth"
        app:layout_constraintTop_toBottomOf="@id/text_cheat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>